# requests_client

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml  readme.rst  setup.py
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  requests_client.client.html  requests_client.compat.html  requests_client.user_agent.html  requests_client.utils.html  search.html  searchindex.js
docs/_ext/: show_on_github.py
docs/_modules/: index.html
docs/_modules/requests_client/: client.html  compat.html  user_agent.html  utils.html
docs/_sources/: requests_client.client.rst.txt  requests_client.user_agent.rst.txt
docs/_src/: conf.py  requests_client.utils.rst
docs/_static/: documentation_options.js
docs/_templates/: page.html
docs_src/: conf.py  index.rst  requests_client.compat.rst
docs_src/ext/: show_on_github.py
requests_client/: __init__.py  __version__.py  _typing.py  async_client.py  base.py  client.py  compat.py  user_agent.py  utils.py
tests/: test_client.py  test_request_methods.py  test_requests.py  test_user_agents.py
